--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -644,3 +644,48 @@ ul.nav.nav-pills li {
       margin: 0 auto;
     }
   }
+
+.dragdropfield {
+    margin-top: 15px;
+    padding: 10px;
+    background: #f5f5f5;
+}
+.dragdropfield .box {
+    text-align: left;
+    display: inline-block;
+    vertical-align: top;
+    margin: 5px;
+    padding: 10px;
+    width: 45%;
+}
+.dragdropfield .h {
+    cursor: pointer;
+}
+.dragdropfield .h input {
+    font-weight: normal;
+    font-size: 20px;
+    padding: 10px;
+    background: transparent;
+    border: 0;
+}
+.dragdropfield .listitem div {
+    margin: 5px;
+    padding: 10px;
+    background: #f2f2f2;
+}
+.dragdropfield .listitem input {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+}
+.dragdropfield .dropzone {
+    min-height: 50px;
+}
+.dragdropfield .newlist {
+    margin-top: 12px;
+}
+@media(max-width: 800px) {
+    .dragdropfield .box {
+        width: 100%;
+    }
+}
