--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -31,6 +31,10 @@ input[type="checkbox"].form-control:checked:after {
 	font-size: 26px;
 }
 
+.noHover {
+    pointer-events: none;
+}
+
 /* Selectv2 responsive */
 .select2-container {
     width: 100% !important;
