--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -31,10 +31,6 @@ input[type="checkbox"].form-control:checked:after {
 	font-size: 26px;
 }
 
-.noHover {
-    pointer-events: none;
-}
-
 /* Selectv2 responsive */
 .select2-container {
     width: 100% !important;
@@ -672,12 +668,12 @@ ul.nav.nav-pills li {
     background: transparent;
     border: 0;
 }
-.dragdropfield .listitem div {
+.dragdropfield .dragdroplistitem div {
     margin: 5px;
     padding: 10px;
     background: #f2f2f2;
 }
-.dragdropfield .listitem input {
+.dragdropfield .dragdroplistitem input {
     display: block;
     box-sizing: border-box;
     width: 100%;
@@ -693,18 +689,38 @@ ul.nav.nav-pills li {
         width: 100%;
     }
 }
-@media (min-width: 1700px) {
-    .d-wide-table-cell {
-        display: table-cell !important;
-    }
-
-    .d-wide-none {
-        display: none !important;
-    }
+.dragdropinfo {
+    font-size: 28px;
 }
-
-@media (min-width: 1200px) and (max-width: 1699px) {
-    .breakAll {
-        word-break: break-all;
-    }
+.dragdroplistitem {
+    position: relative;
+}
+.dragdropitembutton {
+    float: right;
+    cursor: pointer;
+}
+.dragdropitemmenubox {
+    padding: 0 !important;
+    display: none;
+    text-align: left;
+    border: 1px solid #ccc !important;
+    background: #fff !important;
+    position: absolute;
+    right: 0;
+    z-index: 2;
+}
+.dragdropitemmenubutton {
+    padding: 5px;
+    border-top: 1px solid #ccc;
+    display: block;
+    cursor: pointer;
+}
+.dragdropitemmenubutton:hover {
+    background: #f5f5f5;
+}
+#ddsearch {
+    margin: 0 0 5px 0;
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
 }
