--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -678,6 +678,11 @@ ul.nav.nav-pills li {
     box-sizing: border-box;
     width: 100%;
 }
+.dragdropfield .dragdroplistitem select {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+}
 .dragdropfield .dropzone {
     min-height: 50px;
 }
