--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -665,6 +665,8 @@ ul.nav.nav-pills li {
     margin: 5px;
     padding: 10px;
     width: 45%;
+    height: auto;
+    border: none;
 }
 .dragdropfield .h {
     cursor: pointer;
