Ccc: Adapt login page to optional logo, set 'powered by nmsprime' branding to bottom right

--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -803,3 +803,15 @@ div.recolor:hover img {
         min-height: 50vh;
     }
 }
+
+
+#nmsprime-brand {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    max-width: 30vh;
+}
+
+#login-img {
+    max-width: initial;
+}
